--- a/DScaler/Help/Thanks.htm
+++ b/DScaler/Help/Thanks.htm
@@ -98,8 +98,8 @@ developers&#151;for the original screen capture code.</li>
 <li>Jim Ferguson for his ground breaking YXY tool, the model and benchmark 
 for aspect ratio support.</li>
 
-<li>Gerd Knorr for the v4l2 driver for saa7134 on which DScaer's saa713x
-support is based.</li>
+<li>Gerd Knorr for the v4l2 driver for saa7134 on which DScaler's saa713x
+support is based and for providing details on the saa7134 chip.</li>
 
 <li>Erik Spr&aring;ng for the new DScaler logo.</li>
 
