First part of card support page update.

--- a/htdocs/card-support/index.htm
+++ b/htdocs/card-support/index.htm
@@ -40,8 +40,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <p>Here is a list of the cards that should be supported by dTV (list taken 
-        from the linux bttv driver on which dTV was originally based--subsequently 
+      <p>Here is a list of the cards that should be supported by DScaler (list 
+        taken from the linux bttv driver on which DScaler was originally based--subsequently 
         modified based on user reports). Those cards that have been confirmed 
         by users as working are noted as such.</p>
       <table width="620" border="0" cellspacing="0" cellpadding="0" align="left">
@@ -142,7 +142,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           </td>
           <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
           <td align="center" valign="middle" colspan="7"> 
-            <p>This Combo Tuner/Video Card Will Not Work With dTV</p>
+            <p>This Combo Tuner/Video Card Will Not Work With DScaler</p>
           </td>
         </tr>
         <tr> 
@@ -186,6 +186,21 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         <tr> 
           <td valign="middle" align="left"> 
             <p>AverMedia TV Cards</p>
+          </td>
+          <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+        </tr>
+        <tr> 
+          <td valign="middle" align="left"> 
+            <blockquote> 
+              <p>TV 98</p>
+            </blockquote>
           </td>
           <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
           <td align="center" valign="middle">&nbsp;</td>
@@ -379,7 +394,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           </td>
           <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
           <td align="center" valign="middle" colspan="7"> 
-            <p>This Card Will Not Work With DScaler - It Contains the Zoran Chipset</p>
+            <p>This Card Will Not Work With DScaler -- It Contains the Zoran Chipset</p>
           </td>
         </tr>
         <tr> 
@@ -506,6 +521,18 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         <tr> 
           <td valign="middle" align="left"> 
             <blockquote> 
+              <p>WinTV-HD</p>
+            </blockquote>
+          </td>
+          <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle" colspan="7"> 
+            <p>This Card Will Not Work With DScaler -- It Contains The Teralogic 
+              TL880 Chipset </p>
+          </td>
+        </tr>
+        <tr> 
+          <td valign="middle" align="left"> 
+            <blockquote> 
               <p>WinTV-PVR</p>
             </blockquote>
           </td>
@@ -523,7 +550,53 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         <tr> 
           <td valign="middle" align="left"> 
             <blockquote> 
-              <p>Other Hauppauge PCI TV Cards </p>
+              <p>WinTV-PVR-250</p>
+            </blockquote>
+          </td>
+          <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle" colspan="7"> 
+            <p>This Card Will Not Work With DScaler -- It Contains An Unsupported 
+              Chipset </p>
+          </td>
+        </tr>
+        <tr> 
+          <td valign="middle" align="left"> 
+            <blockquote> 
+              <p>WinTV-PVR-350</p>
+            </blockquote>
+          </td>
+          <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle" colspan="7"> 
+            <p>This Card Will Not Work With DScaler -- It Contains An Unsupported 
+              Chipset </p>
+          </td>
+        </tr>
+        <tr> 
+          <td valign="middle" align="left"> 
+            <blockquote> 
+              <p>WinTV-PVR USB</p>
+            </blockquote>
+          </td>
+          <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle" colspan="7"> 
+            <p>This Device Will Not Work With DScaler</p>
+          </td>
+        </tr>
+        <tr> 
+          <td valign="middle" align="left"> 
+            <blockquote> 
+              <p>WinTV USB</p>
+            </blockquote>
+          </td>
+          <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle" colspan="7"> 
+            <p>This Device Will Not Work With DScaler</p>
+          </td>
+        </tr>
+        <tr> 
+          <td valign="middle" align="left"> 
+            <blockquote> 
+              <p>Other Hauppauge PCI TV Cards</p>
             </blockquote>
           </td>
           <td width="1">&nbsp;</td>
@@ -635,8 +708,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             <p>Leadtek WinFast 2000</p>
           </td>
           <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
-          <td align="center" valign="middle">&nbsp;</td>
-          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
@@ -711,6 +784,19 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         <tr> 
           <td valign="middle" align="left"> 
             <p>Magic TView CPH061</p>
+          </td>
+          <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+        </tr>
+        <tr> 
+          <td valign="middle" align="left"> 
+            <p>Magic TView CPH063</p>
           </td>
           <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
           <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
@@ -838,8 +924,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td height="23" align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
           <td height="23" align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
-          <td height="23" align="center" valign="middle">&nbsp;</td>
-          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td height="23" align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
         </tr>
         <tr> 
@@ -847,14 +933,23 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             <blockquote>PCTV Pro</blockquote>
           </td>
           <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
-          <td align="center" valign="middle">&nbsp;</td>
-          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
           <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
           <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle"> 
             <p><a href="Pinnacle_PCTV_Pro_Miro_PCTV_Pro_Notes.htm">Note</a></p>
+          </td>
+        </tr>
+        <tr> 
+          <td valign="middle" align="left"> 
+            <blockquote>PCTV USB</blockquote>
+          </td>
+          <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle" colspan="7"> 
+            <p>This Device Is Not Supported By DScaler</p>
           </td>
         </tr>
         <tr> 
@@ -913,6 +1008,19 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         </tr>
         <tr> 
           <td height="23" valign="middle" align="left"> 
+            <p>Sasem 4-Channel Board</p>
+          </td>
+          <td height="23" width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td height="23" align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle">&nbsp;</td>
+        </tr>
+        <tr> 
+          <td height="23" valign="middle" align="left"> 
             <p>SDI Silk 100</p>
           </td>
           <td height="23" width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
@@ -922,9 +1030,20 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td height="23" align="center" valign="middle">&nbsp;</td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
-          <td height="23" align="center" valign="middle">
-            <p><a href="SDI_Silk_100_Notes.htm">Note</a></p>
+          <td height="23" align="center" valign="middle">&nbsp;</td>
+        </tr>
+        <tr> 
+          <td height="23" valign="middle" align="left"> 
+            <p>SDI Silk 200</p>
           </td>
+          <td height="23" width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td height="23" align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle">&nbsp;</td>
         </tr>
         <tr> 
           <td height="23" valign="middle" align="left"> 
