Added Atsushi to developers list

--- a/DScaler/Help/Authors.htm
+++ b/DScaler/Help/Authors.htm
@@ -169,6 +169,12 @@ alter ego "Hermes Conrad".</p>
 <p>Rob has quickly established himself as a core part of the team.  He has fixed problems all over the code and also provided the new setup routine.</p>
 </blockquote>
 
+<h2>Atsushi Nakagawa</h2>
+
+<blockquote>
+<p>Atsushi added support for Philips' SAA7130/4 based cards.</p>
+</blockquote>
+
 <p>Please see the <a href="Thanks.htm">Thanks</a> file for an
 incomplete list of the many others who have contributed time and
 effort.</p>
