Fixed broken links

--- a/htdocs/readme/DScaler_Readme310.htm
+++ b/htdocs/readme/DScaler_Readme310.htm
@@ -57,7 +57,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 
 <h2>What's New</h2>
 
-<p>See <a href="News.htm">News</a>.</p>
+<p>See <a href="News310.htm">News</a>.</p>
 
 <h2>License:</h2>
 
@@ -114,13 +114,13 @@ running this program.  Use the sync utility from <a target="_blank" href=
 for whichever operating system you are running.</p>
 </font>
 
-<p><a href="Authors.htm">Authors</a></p>
+<p><a href="Authors310.htm">Authors</a></p>
 
-<p><a href="Thanks.htm">Thanks</a></p>
+<p><a href="Thanks310.htm">Thanks</a></p>
 
-<p><a href="IniFile.HTM">Ini File Settings</a></p>
+<p><a href="IniFile310.HTM">Ini File Settings</a></p>
 
-<p><a href="keyboard.htm">Keyboard Shortcuts</a></p>
+<p><a href="keyboard310.htm">Keyboard Shortcuts</a></p>
 
 <h2>Enjoy!</h2>
 
