More updates based on user reports.

--- a/htdocs/card-support/index.htm
+++ b/htdocs/card-support/index.htm
@@ -44,8 +44,12 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         taken from the linux bttv driver on which DScaler was originally based--subsequently 
         modified based on user reports). Those cards that have been confirmed 
         by users as working are noted as such.</p>
+      <p>NOTE: The capture/tuner portion of all video card/capture card combos 
+        are not supported at this time. These cards include ATI-based boards, 
+        such as the ATI All-In Wonder, and GeForce cards, such as the Elsa Gladiac 
+        VIVO line. The video card portion of these cards works with DScaler, however.</p>
       <p><br>
-        Index By Manufacturer/Model Name</p>
+        <b>Index By Manufacturer/Model Name</b></p>
       <p><a href="#A">A</a> | <a href="#B">B</a> | <a href="#C">C</a> | <a href="#D">D</a> 
         | <a href="#E">E</a> | <a href="#F">F</a> | <a href="#G">G</a> | <a href="#H">H</a> 
         | <a href="#I">I</a> | J | <a href="K">K</a> | <a href="#L">L</a> | <a href="#M">M</a> 
@@ -141,6 +145,15 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
+        </tr>
+        <tr> 
+          <td valign="middle" align="left"> 
+            <p>Aldi MD9717</p>
+          </td>
+          <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle" colspan="7"> 
+            <p>See Medion MD9717</p>
+          </td>
         </tr>
         <tr> 
           <td valign="middle" align="left"> 
@@ -342,6 +355,16 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td height="23" align="center" valign="middle">&nbsp;</td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
+        </tr>
+        <tr> 
+          <td height="23" valign="middle" align="left"> 
+            <p>Chronos Video Shuttle IIP TV/FM</p>
+          </td>
+          <td height="23" width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td height="23" align="center" valign="middle" colspan="7"> 
+            <p>This Card Will Not Work With DScaler, Although Support Is Planned 
+              (SAA7134) </p>
+          </td>
         </tr>
         <tr> 
           <td valign="middle" align="left"> 
@@ -742,6 +765,16 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td align="center" valign="middle">&nbsp;</td>
         </tr>
         <tr> 
+          <td height="23" valign="middle" align="left"> 
+            <p>Immersive Holo3DGraph</p>
+          </td>
+          <td height="23" width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td height="23" align="center" valign="middle" colspan="7"> 
+            <p>This Card Will Not Work With DScaler, Although Support Is Planned 
+              (CX2388x/SAA7118) </p>
+          </td>
+        </tr>
+        <tr> 
           <td valign="middle" align="left"> 
             <p>iProTV</p>
           </td>
@@ -836,7 +869,22 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         </tr>
         <tr> 
           <td valign="middle" align="left"> 
-            <p>LifeView FlyKit w/o Tuner</p>
+            <p>LifeView</p>
+          </td>
+          <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+        </tr>
+        <tr> 
+          <td valign="middle" align="left"> 
+            <blockquote> 
+              <p>FlyKit w/o Tuner</p>
+            </blockquote>
           </td>
           <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
           <td align="center" valign="middle">&nbsp;</td>
@@ -849,7 +897,9 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         </tr>
         <tr> 
           <td height="23" valign="middle" align="left"> 
-            <p>LifeView FlyVideo 98</p>
+            <blockquote> 
+              <p>FlyVideo 98</p>
+            </blockquote>
           </td>
           <td height="23" width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
@@ -859,6 +909,30 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td height="23" align="center" valign="middle">&nbsp;</td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
+        </tr>
+        <tr> 
+          <td height="23" valign="middle" align="left"> 
+            <blockquote> 
+              <p>FlyVideo 2000</p>
+            </blockquote>
+          </td>
+          <td height="23" width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td height="23" align="center" valign="middle" colspan="7"> 
+            <p>This Card Will Not Work With DScaler, Although Support Is Planned 
+              (SAA7134) </p>
+          </td>
+        </tr>
+        <tr> 
+          <td height="23" valign="middle" align="left"> 
+            <blockquote> 
+              <p>FlyVideo 3000</p>
+            </blockquote>
+          </td>
+          <td height="23" width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td height="23" align="center" valign="middle" colspan="7"> 
+            <p>This Card Will Not Work With DScaler, Although Support Is Planned 
+              (SAA7134) </p>
+          </td>
         </tr>
         <tr> 
           <td height="23" valign="middle" align="left"> 
@@ -953,6 +1027,39 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         </tr>
         <tr> 
           <td valign="middle" align="left"> 
+            <p>Medion</p>
+          </td>
+          <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle" colspan="7"> 
+            <p>&nbsp;</p>
+          </td>
+        </tr>
+        <tr> 
+          <td valign="middle" align="left"> 
+            <blockquote> 
+              <p>MD5044</p>
+            </blockquote>
+          </td>
+          <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle" colspan="7"> 
+            <p>This Card Will Not Work With DScaler, Although Support Is Planned 
+              (SAA7134) </p>
+          </td>
+        </tr>
+        <tr> 
+          <td valign="middle" align="left"> 
+            <blockquote> 
+              <p>MD9717</p>
+            </blockquote>
+          </td>
+          <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle" colspan="7"> 
+            <p>This Card Will Not Work With DScaler, Although Support Is Planned 
+              (SAA7134) </p>
+          </td>
+        </tr>
+        <tr> 
+          <td valign="middle" align="left"> 
             <p>MIRO PCTV</p>
           </td>
           <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
@@ -1009,7 +1116,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           </td>
           <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
           <td align="center" valign="middle" colspan="7"> 
-            <p>This Card Will Not Work With DScaler, Although Support Is Planned</p>
+            <p>This Card Will Not Work With DScaler, Although Support Is Planned 
+              (CX2388x) </p>
           </td>
         </tr>
         <tr> 
@@ -1127,6 +1235,16 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td height="23" align="center" valign="middle">&nbsp;</td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
+        </tr>
+        <tr> 
+          <td height="23" valign="middle" align="left"> 
+            <p>Prolink XCapture</p>
+          </td>
+          <td height="23" width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td height="23" align="center" valign="middle" colspan="7"> 
+            <p>This Card Will Not Work With DScaler, Although Support Is Planned 
+              (CX23881) </p>
+          </td>
         </tr>
         <tr> 
           <td height="23" valign="middle" align="left"> 
@@ -1317,6 +1435,18 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
+        </tr>
+        <tr> 
+          <td valign="middle" align="left"> 
+            <blockquote> 
+              <p>Cinergy 400</p>
+            </blockquote>
+          </td>
+          <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle" colspan="7"> 
+            <p>This Card Will Not Work With DScaler, Although Support Is Planned 
+              (SAA7134) </p>
+          </td>
         </tr>
         <tr> 
           <td valign="middle" align="left"> 
